search annotation in cds

--- a/z270_petcliente1/package.json
+++ b/z270_petcliente1/package.json
@@ -9,12 +9,11 @@
     "sapui5"
   ],
   "main": "webapp/index.html",
-  "dependencies": {},
   "devDependencies": {
-    "@ui5/cli": "^2.14.1",
-    "@sap/ux-ui5-tooling": "1",
+    "@sap-ux/ui5-middleware-fe-mockserver": "2",
     "@sap/ux-specification": "UI5-1.117",
-    "@sap-ux/ui5-middleware-fe-mockserver": "2"
+    "@sap/ux-ui5-tooling": "1",
+    "@ui5/cli": "^3.4.0"
   },
   "scripts": {
     "start": "fiori run --open \"test/flpSandbox.html?sap-client=200&sap-ui-xx-viewCache=false#z270petcliente1-tile\"",
